# ray-tracing

./: .gitignore  CMakeLists.txt
src/: main.cpp  ray.hpp
src/math/: vec3.hpp
src/utils/: color.cpp  color.hh
